styles.css
/* ... */
/* Completion progress help */
.format-ned.path-course-view .course-content {
    position: relative;
}

/* Completion progress icon */
.format-ned.path-course-view .completionprogress {
    position: absolute;
    right: 62px;
    width: 16px;
}

.format-ned.path-course-view .single-section .completionprogress {
    right: 57px;
}

.format-ned.path-course-view .completionprogresshelp {
    height: 40px;
}

.format-ned.path-course-view .completionprogress .helptooltip img {
    padding: 0;
}

.format-ned.path-course-view .completionprogress.nediconsleft {
    left: 9px;
}

/* Completion icons */
body:not(.editing) ul.ned .section .activity .actions {
    width: 18px;
}

.path-course-view ul.ned .section li.activity .actions form.togglecompletion .btn {
    border-width: 0;
    margin: 0;
    padding: 0;
}

/* nediconsleft */
ul.ned.nediconsleft .section .activity .actions {
    left: -25px;
}

/* sectioncontentjustification */
ul.ned.sectioncontentjustification .content {
    align-items: center;
    display: flex;
    flex-direction: column;
}

ul.ned.sectioncontentjustification .section .activity .actions {
    right: -10px;
}

/* Activity completion background */
.course-content ul.ned li.section .activity.completion-background {
    padding: .4em;
}

.course-content ul.ned li.section .activity.completion-background .mod-indent-outer {
    width: calc(100% - 34px);
}

.course-content ul.ned li.section .activity.completion-background .activityinstance {
    margin: 0;
    padding: 5px 15px 1px 10px;
}

.section .activity.completion-background .contentafterlink {
    margin-left: 40px;
}

.course-content ul.ned li.section .activity.completion-auto-fail .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-n .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-pass .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-y .activityinstance,
.course-content ul.ned li.section .activity.completion-manual-n .activityinstance,
.course-content ul.ned li.section .activity.completion-manual-y .activityinstance,
.course-content ul.ned li.section .activity.completion-saved .activityinstance,
.course-content ul.ned li.section .activity.completion-submitted .activityinstance {
    border-radius: 10px;
}

/* Order for colours here is important to make sure the correct one is used. */
.course-content ul.ned li.section .activity.completion-manual-n .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-n .activityinstance {
    background-color: #FFF;
    border: 1px solid #AEE5E3;
}

.course-content ul.ned li.section .activity.completion-submitted .activityinstance,
.course-content ul.ned li.section .activity.completion-waitinggrade .activityinstance {
    background-color: #FBFFDB;
    border: 1px solid #FBFFDB;
}

.course-content ul.ned li.section .activity.completion-auto-pass .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-y .activityinstance,
.course-content ul.ned li.section .activity.completion-manual-y .activityinstance {
    background-color: #D0EFCF;
    border: 1px solid #D0EFCF;
}

.course-content ul.ned li.section .activity.completion-auto-fail .activityinstance {
    background-color: #F9E2E3;
    border: 1px solid #F9E2E3;
}

.course-content ul.ned li.section .activity.completion-background .actions {
    top: 7px;
}

/* Framed sections */
/* Set the background colour of the li.section - less to style and no adaption for editing but format has to set the section content background and highlight colour. */
ul.ned-framedsections .section.main,
ul.ned-framedsections-s0 .section.main {
    margin-bottom: 12px;
}

ul.ned-framedsections .section.main:last-child {
    margin-bottom: 0;
}

.course-content ul.ned-framedsections .section.main .content {
    background-color: #fff;
    margin: 0 8px;
}

.course-content ul.ned-framedsections .section.main .header {
    margin-left: 20px;
    margin-right: 20px;
}

.editing .course-content ul.ned-framedsections .section.main .header,
.editing .course-content ul.ned-framedsections .section.main .footer {
    margin-left: 40px;
    margin-right: 40px;
}

.course-content ul.ned-framedsections .section.main .header {
    min-height: 8px;
}

.course-content ul.ned-framedsections .section.main .footer {
    min-height: 3px;
}

.editing .course-content ul.ned-framedsections .section.main .header {
    padding: 0 8px;
}

.course-content ul.ned-framedsections .section.main.current .content {
    background-color: #ffe7aa;
}

.course-content ul.ned-framedsections ul.section {
    margin-top: 0;
    margin-bottom: 0;
    padding-bottom: 14px;
}

.course-content ul.ned.ned-framedsections li.section .left,
.course-content ul.ned.ned-framedsections li.section .right {
    padding: 0;
    width: 8px;
}

.editing .course-content ul.ned.ned-framedsections li.section .left {
    width: 40px;
}

.editing .course-content ul.ned.ned-framedsections li.section .right {
    width: auto;
}

.editing .course-content ul.ned.ned-framedsections li.section .left a {
    display: block;
}

.editing .course-content ul.ned.ned-framedsections li.section .left a img.nedsinglesectionicon{
    padding-right: 0;
}

.editing .course-content ul.ned.ned-framedsections li.section .content {
    border-left-style: solid;
    border-left-width: 3px;
    border-right-style: solid;
    border-right-width: 3px;
}

.editing .course-content ul.ned-framedsections .section.main .content {
    margin: 0 40px;
}

.course-content ul.ned-framedsections-s0 .section.main .content,
.course-content ul.ned-framedsections .section.main .content {
    min-height: 1em;
    padding-bottom: 8px;
    padding-left: 25px;
    padding-right: 25px;
}

.course-content ul.ned-framedsections .section.main .content .sectionname {
    margin-top: 0;
}

.ned-framedsections .section .header .sectionname {
    text-align: center;
}
/* ... */

